# NKU2026

./: .gitignore  CMakeLists.txt  LoopCampus.gitignore  LoopCampus.pro  gamestate.cpp  gamestate.h  inventorywindow.cpp  inventorywindow.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  scenemanager.cpp  scenemanager.h  storydispaly.cpp  storydisplay.h
src/: audio.cpp  audio.h  gamestate.cpp  gamestate.h  gameview.h  headless.cpp  headless.h  main.cpp  mainwindow.cpp  mainwindow.h  scenes.cpp  scenes.h  test_main.cpp
